--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,9 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'junit:junit:4.13.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+
     // Specify the version of Minecraft to use.
     // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
     // The "userdev" classifier will be requested and setup by ForgeGradle.
