--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,10 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.13.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
+
+//    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1' // Use the appropriate version
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1' // Use the appropriate version
 
     // Specify the version of Minecraft to use.
     // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
